fix: force grayscale antialiasing globally to resolve blurry thick text rendering on windows

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,11 @@
     font-family: inherit;
   }
 
+  body {
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+  }
+
   /* Universal Field Styling (Inputs, Selects, Textareas) */
   input:not([type="checkbox"]):not([type="radio"]):not(:focus),
   select:not(:focus),
